--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.assignmenttask">
-
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
+      android:name=".App"
       android:theme="@style/Theme.AssignmentTask">
     <activity
-        android:name=".MainActivity"
+        android:name=".ui.MainActivity"
         android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+
+
     </activity>
+    <receiver android:name=".service.FileProgressReceiver"
+        android:exported="false"
+        >
+      <intent-filter>
+        <action android:name="ACTION_CLEAR_NOTIFICATION" />
+        <action android:name="ACTION_PROGRESS_NOTIFICATION" />
+        <action android:name="ACTION_UPLOADED" />
+      </intent-filter>
+    </receiver>
+    <service
+        android:exported="false"
+        android:name=".service.DownloadService"
+        android:permission="android.permission.BIND_JOB_SERVICE"
+        />
+    <service
+        android:exported="false"
+        android:name=".service.DownloadServiceUsingService"
+        />
   </application>
 
 </manifest>
